# gz-transport-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
examples/: echo_poses.rs  list_topics.rs  pause_world.rs
proto/gz/msgs/: discovery.proto  physics.proto  stringmsg.proto  twist.proto
scripts/: sync_protos.sh
src/: config.rs  error.rs  lib.rs  node.rs  partition.rs
src/discovery/: client.rs  message.rs  mod.rs  registry.rs
src/msgs/: mod.rs
src/transport/: mod.rs  publisher.rs  service.rs  subscriber.rs
tests/: discovery_tests.rs  integration_tests.rs  publisher_tests.rs
